src/css/11_modal_buy.css
.buy-overlay-modal {
  position: fixed;
  top: 0;
  left: 0;

  overflow-y: auto;
  -webkit-overflow-scrolling: touch;

  background-image: var(--backdrop-shadow);

  width: 100%;
  height: 100%;

  opacity: 0;
  visibility: hidden;
  z-index: 100;

  transition: var(--standard-transition);
}

.overlay.active,
.modal.active {
  opacity: 1;
  visibility: visible;
}

.buy-modal {
  /* Basic styles */
  position: absolute;
  top: calc(50%);
  left: calc(50%);
  transform: translate(-50%, -50%);

  padding: 32px 24px;

  width: 100%;
  max-width: 311px;
  height: 100%;
  overflow: scroll;

  border-radius: 15px;

  background-color: #fafafa;
  opacity: 0;
  visibility: hidden;
  z-index: 101;

  transition: var(--standard-transition);
}

/* Tablet screen >= 768 */
@media only screen and (min-width: 768px) {
  .buy-modal {
    padding: 48px;

    max-width: none;
    width: 609px;
  }
}

.buy-modal-close-btn {
  /* Basic styles */
  position: absolute;
  top: 14px;
  right: 14px;

  cursor: pointer;

  display: flex;
  align-items: center;
  justify-content: center;

  width: 24px;
  height: 24px;
  padding: 0;

  background: none;
  border: none;
}

/* Tablet screen >= 768 */
@media only screen and (min-width: 768px) {
  .buy-modal-close-btn {
    top: 24px;
    right: 24px;

    width: 28px;
    height: 28px;
  }
}

.buy-modal-close-btn:hover,
.buy-modal-close-btn:focus {
  background-color: var(--button-hover-color);
  fill: var(--color-wite);
}

.buy-modal-close-icon {
  /* Basic styles */
  stroke: var(--color-for-label);

  transition-property: fill;
  transition: var(--standard-transition);
}

/* Tablet screen >= 768 */
@media only screen and (min-width: 768px) {
  .buy-modal-close-icon {
    width: 28px;
    height: 28px;
  }
}

.buy-modal-text {
  /* Basic styles */
  text-align: center;
  margin-bottom: 32px;

  font-weight: 600;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: -0.03em;

  text-transform: uppercase;

  color: var(--accent-color);
}

/* Tablet screen >= 768 */
@media only screen and (min-width: 768px) {
  .buy-modal-text {
    font-size: 24px;
    line-height: 1.16;
  }
}

.buy-logo-now {
  color: var(--primary-text-color-theme-light);
}

.buy-card {
  /* Basic styles */
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 32px;

  gap: 8px 16px;
}

/* Tablet screen >= 768 */
@media only screen and (min-width: 768px) {
  .buy-card {
    margin-bottom: 40px;
  }
}

.buy-card-item {
  display: flex;
  width: 263px;
  justify-content: space-between;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;

  background: var(--primary-text-color-theme-dark);
  border: 1px solid var(--slider-marker-color);
  border-radius: 15px;
}

/* Tablet screen >= 768 */
@media only screen and (min-width: 768px) {
  .buy-card-item {
    flex-wrap: wrap;
    justify-content: center;
    row-gap: 14px;

    padding-top: 24px;
    padding-bottom: 18px;

    width: 160px;
  }
}

.img-styles {
  /* Basic styles */
  width: 84px;
  height: 69px;
  padding: 8px 16px;
}

/* Tablet screen >= 768 */
@media only screen and (min-width: 768px) {
  .img-styles {
    width: 120px;
    height: 107px;

    padding: 0;
  }
}

.buy-card-dose {
  display: flex;
  justify-content: center;
  align-items: center;

  background: var(--background-color-theme-light);
  border: 1px solid var(--slider-marker-color);
  border-radius: 100px;
}

.buy-card-text {
  padding: 6px 16px;

  font-weight: 600;
  font-size: 14px;
  line-height: 1.21;

  color: var(--primary-text-color-theme-light);
}

/* .buy-form-input {
} */

.buy-modal-label {
  /* Basic styles */
  display: block;

  margin-bottom: 8px;

  font-weight: 500;
  font-size: 12px;
  line-height: 1.17;

  color: var(--primary-text-color-theme-light);
}

/* Tablet screen >= 768 */
@media only screen and (min-width: 768px) {
  .buy-modal-label {
    font-size: 14px;
    line-height: 1.28;
  }
}

.buy-modal-form-area {
  position: relative;
  margin-bottom: 18px;
}

.buy-modal-form-input,
.buy-modal-form-comment {
  width: 100%;

  padding-left: 18px;

  border: 1.5px solid var(--slider-marker-color);
  filter: drop-shadow(0px 5.44492px 5.44492px rgba(0, 0, 0, 0.03));
  border-radius: 8px;

  outline: transparent;

  transition: border-color;
  transition-duration: 250ms;
  transition-timing-function: var(--standard-transition);
}

.buy-modal-form-input {
  /* Basic styles */
  height: 45px;

  font-size: 14px;
  line-height: 1.21;

  color: var(--color-logo-ligt);
}

/* Tablet screen >= 768 */
@media only screen and (min-width: 768px) {
  .buy-modal-form-input {
    height: 66px;
    padding-left: 24px;

    border-radius: 16px;

    font-size: 18px;
    line-height: 1.22;
  }
}

.buy-modal-form-area .buy-phon {
  /* Basic styles */
  padding-left: 106px;
}

/* Tablet screen >= 768 */
@media only screen and (min-width: 768px) {
  .buy-modal-form-area .buy-phon {
    padding-left: 177px;
  }
}

.buy-list-personal {
  /* Basic styles */
  margin-bottom: 18px;

  display: flex;
  flex-wrap: wrap;

  gap: 14px 21px;
}

/* Tablet screen >= 768 */
@media only screen and (min-width: 768px) {
  .buy-list-personal {
    flex-wrap: nowrap;
  }
}
.buy-item-personal {
  width: 100%;
}

.buy-modal-form-comment {
  /* Basic styles */
  resize: none;
  display: block;
  height: 113px;
  margin-bottom: 18px;

  padding-left: 16px;
  padding-top: 8px;

  font-size: 14px;
  line-height: 1.21;
}

/* Tablet screen >= 768 */
@media only screen and (min-width: 768px) {
  .buy-modal-form-comment {
    height: 163px;
    padding-left: 24px;
    padding-top: 22px;

    border-radius: 13px;

    font-size: 18px;
    line-height: 1.22;
  }
}

.buy-modal-form-input:focus,
.buy-modal-form-comment:focus {
  border-color: var(--color-social-icon);
}

.buy-flag-phon {
  /* Basic styles */
  position: absolute;
  top: 50%;
  left: 16px;
  transform: translateY(-50%);

  display: flex;
  gap: 8px;
  align-items: center;
  padding-right: 8px;
  box-shadow: 1.5px 0px 0px rgba(0, 0, 0, 0.1);
}

/* Tablet screen >= 768 */
@media only screen and (min-width: 768px) {
  .buy-flag-phon {
    left: 24px;
    gap: 18px;
  }
}

.buy-flag-phon .text {
  /* Basic styles */
  font-weight: 500;
  font-size: 14px;
  line-height: 1.21;
}

/* Tablet screen >= 768 */
@media only screen and (min-width: 768px) {
  .buy-flag-phon .text {
    font-size: 18px;
    line-height: 1.22;
  }
}

.buy-modal-form-icon {
  pointer-events: none;
}

.buy-icon-flag {
  /* Basic styles */
  width: 24px;
  height: 24px;
}

/* Tablet screen >= 768 */
@media only screen and (min-width: 768px) {
  .buy-icon-flag {
    width: 32px;
    height: 32px;
  }
}

.buy-mastercard {
  /* Basic styles */
  padding-right: 40px;
}

/* Tablet screen >= 768 */
@media only screen and (min-width: 768px) {
  .buy-mastercard {
    padding-right: 52px;
  }
}

.buy-icon-mastercard {
  /* Basic styles */
  width: 32px;
  height: 21px;
  position: absolute;
  top: 50%;
  right: 14px;
  transform: translateY(-50%);
}

/* Tablet screen >= 768 */
@media only screen and (min-width: 768px) {
  .buy-icon-mastercard {
    width: 44px;
    height: 30px;
  }
}

.buy-button-submit {
  /* Basic styles */
  display: block;
  width: 109px;
  height: 41px;

  cursor: pointer;

  background-color: var(--accent-color);
  border-radius: 100px;
  border: none;

  font-weight: 600;
  font-size: 14px;
  line-height: 1.21;

  color: var(--primary-text-color-theme-dark);

  transition: background-color;
  transition-duration: 250ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

/* Tablet screen >= 768 */
@media only screen and (min-width: 768px) {
  .buy-button-submit {
    width: 133px;
    height: 45px;
  }
}
.buy-button-submit:hover,
.buy-button-submit:focus {
  background-color: var(--button-hover-color);

  color: var(--accent-color);
}

